tests/Unit/Mocks/invalid-project-dir/config/invalid.routes3.php
<?php

return [
    'not-an-object',
];
